kubernetes/apps/hydra/federated-cloud-platform/httpRoute-http.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: cloud-thetillhoff-de-http
spec:
  parentRefs:
    - name: http-gateway
      namespace: gateways
  hostnames:
    - cloud.thetillhoff.de
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
